test/parse/expr/bad-const-v128-nat-expected.txt
;;; ERROR: 1
;;; FLAGS: --enable-simd
(module
  (func v128.const i32 0x12345678 -123 0x00000000 0xabcd3478))
(module
  (func v128.const i32 0x12345678 0x9 +234 0xabcd3478))
(;; STDERR ;;;
out/test/parse/expr/bad-const-v128-nat-expected.txt:4:35: error: unexpected token "-123", expected an Nat literal (e.g. 123).
  (func v128.const i32 0x12345678 -123 0x00000000 0xabcd3478))
                                  ^^^^
out/test/parse/expr/bad-const-v128-nat-expected.txt:6:39: error: unexpected token "+234", expected an Nat literal (e.g. 123).
  (func v128.const i32 0x12345678 0x9 +234 0xabcd3478))
                                      ^^^^
;;; STDERR ;;)
